// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image component Image functional tests When getUrl returns null, with an errorComponent, should render the error 1`] = `
<DocumentFragment>
  <span>
    Error: No value found for property.
  </span>
</DocumentFragment>
`;

exports[`Image component Image snapshots does not render default loading message if loadingComponent is null 1`] = `<DocumentFragment />`;

exports[`Image component Image snapshots matches snapshot with additional props for img and input 1`] = `
<DocumentFragment>
  <img
    alt="test img"
    class="img-class"
    src="mock object url"
  />
  <input
    accept="image/*"
    class="input-class"
    type="file"
  />
</DocumentFragment>
`;

exports[`Image component Image snapshots matches snapshot with standard props 1`] = `
<DocumentFragment>
  <img
    alt=""
    src="mock object url"
  />
</DocumentFragment>
`;

exports[`Image component Image snapshots renders a a custom delete button if passed and allowDelete is true 1`] = `
<DocumentFragment>
  <span>
    Error: No value found for property.
  </span>
  <button
    type="button"
  >
    Custom Delete Component
  </button>
</DocumentFragment>
`;

exports[`Image component Image snapshots renders a a default delete button if allowDelete is true 1`] = `
<DocumentFragment>
  <span>
    Error: No value found for property.
  </span>
  <button
    type="button"
  >
    Delete
  </button>
</DocumentFragment>
`;

exports[`Image component Image snapshots renders an error message if an errorComponent is provided 1`] = `
<DocumentFragment>
  <span
    id="custom-error-component"
  >
    Error: No value found for property.
  </span>
</DocumentFragment>
`;

exports[`Image component Image snapshots renders default error message if there is an error and no errorComponent is passed 1`] = `
<DocumentFragment>
  <span>
    Error: No value found for property.
  </span>
</DocumentFragment>
`;

exports[`Image component Image snapshots renders default loading message if thing is undefined and there is no error 1`] = `
<DocumentFragment>
  <span>
    fetching data in progress
  </span>
</DocumentFragment>
`;

exports[`Image component Image snapshots renders loading component if passed and thing is undefined and there is no error 1`] = `
<DocumentFragment>
  <span
    id="custom-loading-component"
  >
    loading...
  </span>
</DocumentFragment>
`;
